# Operating-Systems

./: CMakeLists.txt
Lab1/: lab1.cpp
Lab2/: lab2.cpp
Lab3/cpp/: lab3_task1.cpp  lab3_task2.cpp  lab3_task3.cpp
Lab3/files/: task1.txt  task3_input.txt  task3_output.txt
Lab4/cpp/: lab4_task1.cpp  lab4_task2.cpp  lab4_task5_client.cpp  lab4_task5_server.cpp  task42.cpp  task43.cpp  task44_client.cpp  task44_server.cpp  task45_client.cpp  task45_server.cpp  task46.cpp  task47_client.cpp  task47_server.cpp  task48.cpp
Lab4/files/: task1_process1.txt  task1_process2.txt  task4_text.txt
Lab5/: drive_block_space.cpp
Lab5/cpp/: draft2.cpp  task51.cpp  task52.cpp
Lab5/files/: transaction.txt
Lab6/cpp/: task61.cpp
helpers/: helpers.h
